tests/reference/asr-test_const_list_insert-4c81295.stderr
semantic error: cannot insert element in a const list
 --> tests/errors/test_const_list_insert.py:7:5
  |
7 |     CONST_INTEGER_LIST.insert(3, 8)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
